<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">X Alarm</string>
    <string name="wake_up_in">WAKE UP IN</string>
    <string name="volume">Volume</string>
    <string name="vibration">Vibration</string>
    <string name="Ringtone">Ringtone</string>
    <string name="back">Back</string>
    <string name="default_label">"Click to go to unlock alarm"</string>
    <string name="alarm_alert_alert_silenced">"Alarm has ringed <xliff:g id="MINUTES">%d</xliff:g> minutes"</string>
    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"Alarm set for 1 minute from now"</item>
        <item msgid="7110525731259629055">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> from now"</item>
        <item msgid="7003982794086186185">"Alarm set for <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
        <item msgid="7311021123230077742">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
        <item msgid="8431715191823114872">"Alarm set for <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
        <item msgid="3244151088673185428">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
        <item msgid="3663661342600168814">"Alarm set for <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
        <item msgid="7779544127785487304">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
    </string-array>
    <string-array name="alarm_distance">
        <item msgid="5163476010406761625">"1 minute from now"</item>
        <item msgid="7110525731259629055">"<xliff:g id="DAYS">%1$s</xliff:g> from now"</item>
        <item msgid="7003982794086186185">"<xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
        <item msgid="7311021123230077742">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
        <item msgid="8431715191823114872">"<xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
        <item msgid="3244151088673185428">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
        <item msgid="3663661342600168814">"<xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
        <item msgid="7779544127785487304">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> days"</string>
    <string name="hour">"1 hour"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> hours"</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> minutes"</string>
    <string name="every_day">"every day"</string>
    <string name="never">"never"</string>
    <string name="day_concat">", "</string>
    <string name="turn_on_alarm">Turn On Alarm</string>
    <string name="turn_off_alarm">Turn Off Alarm</string>
    <string name="shake_your_phone">Shake Your Phone</string>
    <string name="puzzle_alarm">Puzzle Alarm</string>
    <string name="shake">SHAKE</string>
    <string name="puzzle">PUZZLE</string>
    <string name="math">MATH</string>
    <string name="type">TYPE</string>
    <string name="have_a_try">Have a try</string>
    <string name="math_exercise">Math Exercise</string>
    <string name="type_alarm">Type Alarm</string>
    <string name="puzzle_game">Puzzle Game</string>
    <string name="puzzle_complete">Unlock Successfully</string>
    <string name="unlock_type_updated">Unlock Type Updated</string>
    <string name="setting_updated">Setting Updated</string>

    <!-- For Type Alarm  -->
    <string name="type_alarm_sentence_0">When all else is lost the future still remains</string>
    <string name="type_alarm_sentence_1">The best preparation for tomorrow is doing your best today</string>
    <string name="type_alarm_sentence_2">Suffering is the most powerful teacher of life</string>
    <string name="type_alarm_sentence_3">A man can not ride your back unless it is bent</string>
    <string name="type_alarm_sentence_4">Wasting time is robbing oneself</string>
    <string name="type_alarm_sentence_5">Never underestimate your power to change yourself</string>
    <string name="type_alarm_sentence_6">The man who has made up his mind to win will never say impossible</string>
    <string name="type_alarm_sentence_7">All things in their being are good for something</string>
    <string name="type_alarm_sentence_8">There is no such thing as genius, it is nothing but labour and diligence</string>
    <string name="type_alarm_sentence_9">Nothing in the world is difficult for one who sets his mind on it</string>
    <string name="type_alarm_sentence_10">I can because i think i can</string>
    <string name="type_alarm_sentence_11">Quitters never win and winners never quit</string>
    <string name="type_alarm_sentence_12">Action speak louder than words</string>
    <string name="type_alarm_sentence_13">Take control of your own destiny</string>
    <string name="type_alarm_sentence_14">Keep on going never give up</string>
    <string name="type_alarm_sentence_15">Knowledge without practice makes but half an artist</string>

    <string name="about">About</string>

    <string name="about_x_alarm_title">About X-ALARM:</string>
    <string name="about_x_alarm_content">
        X-ALARM is a cool application to help lazy boys/girls to get up.
        Yes, we are all lazy in the morning :D
    </string>
    <string name="about_x_alarm_content_b">
        X-Alarm not only provides a very soothing ringtone which wakes you up smoothly
        instead of being awakened suddenly.
        But also offers a variety of interesting ways to unlock alarm
        so you have to get up to unlock it!
    </string>

    <string name="about_you_title">About you:</string>
    <string name="about_you_content">
        If you have any cool and amazing ideas, welcome to contact us by emails.
    </string>

    <string name="about_app_title">About code:</string>
    <string name="about_app_content">
        X-ALARM is an open source project, welcome every developer to contribute on it.
        Please visit <a href="http://loop-x.github.io/X-Alarm/">Project Page</a> to know more details.
        Thanks to Youngxkk, UFreedom, DONGChuan who designed and developed it.
    </string>

    <string name="about_contact_title">Contact Us:</string>
    <string name="about_contact_content">
        <a href="mailto:loopxlab@gmail.com">loopxlab@gmail.com</a>
    </string>
    <string name="alarm_closed_hint">Alarm Closed</string>
    <string name="about_title">ABOUT</string>
    <string name="version_hint">X Alarm  v<xliff:g id="version">%1$s</xliff:g></string>

</resources>
