<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:paddingLeft="120dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loopX_2"
        android:textColor="@color/loopX_3"
        android:text="@string/volume" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loopX_2"
        android:textColor="@color/loopX_3"
        android:text="@string/vibration" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loopX_2"
        android:textColor="@color/loopX_3"
        android:text="@string/Ringtone" />


</LinearLayout>