<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/normalLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/model_type" />

        <io.github.loopX.XAlarm.view.YummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:gravity="center_horizontal"
            android:text="@string/type"
            android:textColor="@color/loopX_3"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_unlock_type_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:src="@drawable/icon_choose_ringtone"/>

    </LinearLayout>

    <View
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:background="#4DFFFFFF" />

    <LinearLayout
        android:id="@+id/mathLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/model_math" />

        <io.github.loopX.XAlarm.view.YummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:gravity="center_horizontal"
            android:text="@string/math"
            android:textColor="@color/loopX_3"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_unlock_type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:src="@drawable/icon_choose_ringtone"/>

    </LinearLayout>

    <View
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:background="#4DFFFFFF" />

    <LinearLayout
        android:id="@+id/paintLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/model_paint" />

        <io.github.loopX.XAlarm.view.YummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:gravity="center_horizontal"
            android:text="@string/puzzle"
            android:textColor="@color/loopX_3"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_unlock_type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:src="@drawable/icon_choose_ringtone"/>

    </LinearLayout>

    <View
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:background="#4DFFFFFF" />

    <LinearLayout
        android:id="@+id/shakeLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/model_shake" />

        <io.github.loopX.XAlarm.view.YummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:gravity="center_horizontal"
            android:text="@string/shake"
            android:textColor="@color/loopX_3"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_unlock_type_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:src="@drawable/icon_choose_ringtone"/>

    </LinearLayout>

</merge>